# Serverless-parallel-workloads

./: .gitignore  Readme.md
Scripts/Execution/: execute.py
Scripts/Execution/aws/: executeAWS.py
Scripts/Influx/: DeployAndUpdate.py
Scripts/Influx/gcr/: executegcr.py
Scripts/Influx/google/: executegcf.py
aws/: README.md
aws/atax/cpp/: main.cpp
aws/atax/go/: go.mod  main.go
aws/atax/python/: Dockerfile  atax.py  requirements.txt
aws/go_fast/cpp/: main.cpp
aws/go_fast/go/: go.mod  main.go  output.json  payload.json
aws/go_fast/python/: Dockerfile  go_fast.py
aws/heat/cpp/: CMakeLists.txt  heat.hpp  main.cpp  misc.cpp
aws/heat/go/: go.mod  main.go
aws/mandelbrot/Java/: build.gradle
aws/mandelbrot/cpp/: CMakelists.txt  main.cpp  mandelbrot-set.h
aws/mandelbrot/go/: go.mod  main.go
aws/monte/cpp/: CMakeLists.txt  main.cpp
aws/monte/go/: go.mod  main.go
aws/mvt/cpp/: CMakeLists.txt  main.cpp
aws/mvt/go/: go.mod  main.go
aws/mvt/python/: Dockerfile  mvt.py
base-programs/MicroBenchmarks/atax/: atax.py
base-programs/MicroBenchmarks/atax/cpp/: Makefile  atax.cpp
base-programs/MicroBenchmarks/atax/go/src/: atax.go  go.mod
base-programs/MicroBenchmarks/atax/java/: Main.java
base-programs/MicroBenchmarks/atax/java/ataxpackage/: Atax.java
base-programs/MicroBenchmarks/atax/python/: atax.py
base-programs/MicroBenchmarks/go_fast/: go_fast.py
base-programs/MicroBenchmarks/go_fast/cpp/: Makefile  go_fast.cpp
base-programs/MicroBenchmarks/go_fast/go/fast/: go.mod  go_fast.go
base-programs/MicroBenchmarks/go_fast/java/: Main.java
base-programs/MicroBenchmarks/go_fast/python/: go_fast.py
base-programs/MicroBenchmarks/mvt/: mvt.py
base-programs/MicroBenchmarks/mvt/cpp/: Makefile  mvt.cpp
base-programs/MicroBenchmarks/mvt/go/src/: go.mod  (+1 more)
base-programs/MicroBenchmarks/mvt/java/: Main.java
base-programs/MicroBenchmarks/mvt/python/: mvt.py
base-programs/Monte_Carlo/cpp/: Makefile  monte  monte_carlo.cpp
base-programs/Monte_Carlo/go/src/: go.mod  monte.go
base-programs/Monte_Carlo/java/: Main.java
base-programs/heat/cpp/: Makefile  heat.cpp  heat.hpp  input.cpp  input.h  misc.cpp  relax_jacobi.cpp  runHEAT.scp  timing.cpp  timing.h
base-programs/heat/go/src/: go.mod  heat.go
base-programs/heat/java/: Main.java
base-programs/mandelbrot/cpp/: Makefile  mandelbrot  mandelbrot.cpp
base-programs/mandelbrot/go/src/: go.mod  mandelbrot.go
base-programs/mandelbrot/java/: Main.java
base-programs/mandelbrot/java/mandelbrotpackage/: Mandelbrot.java
gcf/atax/go/: go.mod  runAtax.go
gcf/atax/java/: pom.xml
gcf/go_fast/go/: go.mod  runGoFast.go
gcf/go_fast/java/: pom.xml
gcf/go_fast/python/: main.py  requirements.txt
gcf/heat/go/: go.mod  runHeat.go
gcf/heat/java/: pom.xml
gcf/mandelbrot/go/: go.mod  runMandelbrot.go
gcf/mandelbrot/java/: pom.xml
gcf/monte/go/: go.mod  runMonte.go
gcf/monte/java/: pom.xml
gcf/mvt/go/: go.mod  runMVT.go
gcf/mvt/java/: pom.xml
gcf/mvt/python/: main.py
gcr/atax/cpp/: CMakeLists.txt  Dockerfile  atax.cpp  atax.hpp  atax_handler.cpp
gcr/atax/go/: Dockerfile  go.mod  main.go
gcr/go_fast/Java/: Dockerfile  pom.xml
gcr/go_fast/cpp/: CMakeLists.txt  Dockerfile  Vector.cpp  go_fast.cpp  go_fast.hpp  go_fast_handler.cpp
gcr/go_fast/go/: Dockerfile  env.list  go.mod  main.go
gcr/go_fast/python/: Dockerfile  main.py  main_go.py  requirements.txt
gcr/heat/Java/: Dockerfile  pom.xml
gcr/heat/cpp/: CMakeLists.txt  Dockerfile  heat.cpp  heat.hpp  heat_handler.cpp
gcr/heat/go/: Dockerfile  go.mod  main.go
gcr/mandelbrot/Java/: Dockerfile  pom.xml
gcr/mandelbrot/cpp/: CMakeLists.txt  Dockerfile  mandelbrot.cpp  mandelbrot.hpp  mandelbrot_handler.cpp
gcr/mandelbrot/go/: Dockerfile  go.mod  main.go
gcr/monte/Java/: Dockerfile  pom.xml
gcr/monte/cpp/: CMakeLists.txt  Dockerfile  monte.cpp  monte.hpp  monte_handler.cpp
gcr/monte/go/: Dockerfile  go.mod  main.go
gcr/mvt/Java/: Dockerfile  pom.xml
gcr/mvt/cpp/: CMakeLists.txt  Dockerfile  mvt.cpp  mvt.hpp  mvt_handler.cpp
gcr/mvt/go/: Dockerfile  go.mod  main.go
gcr/mvt/python/: main.py
(+36 files in other folders)
